[project]
name = "tropennacht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "plotly>=5.24.0",
    "plotly-calplot>=0.1.20",
    "pandas>=2.2.2",
    "meteostat>=1.6.8",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
